--- a/.github/workflows/daily_security.yml
+++ b/.github/workflows/daily_security.yml
@@ -3,7 +3,7 @@ name: Security audit
 
 on:
   schedule:
-    - cron: '15 4 * * *'
+    - cron: "15 4 * * *"
   workflow_dispatch:
 
 permissions: {}
