--- a/.github/workflows/daily_security.yml
+++ b/.github/workflows/daily_security.yml
@@ -3,7 +3,7 @@ name: Security audit
 
 on:
   schedule:
-    - cron: '15 4 * * *'
+    - cron: "15 4 * * *"
   workflow_dispatch:
 
 permissions: {}
@@ -12,7 +12,7 @@ jobs:
   audit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
       - uses: rustsec/audit-check@69366f33c96575abad1ee0dba8212993eecbe998 # v2.0.0
